✅ Update Article & Add Image main.ping

--- a/articles/7e5ff36c98fd05.md
+++ b/articles/7e5ff36c98fd05.md
@@ -4,7 +4,7 @@ emoji: "📗"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["markdown"]
 published: false
-image: "sample.png"
+image: "main.png"
 description: "Zenn で使用可能な Markdown記法 のリストです。"
 ---
 
