--- a/articles/7e5ff36c98fd05.md
+++ b/articles/7e5ff36c98fd05.md
@@ -2,7 +2,7 @@
 title: "Zenn Markdown記法"
 emoji: "📗"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["markdown"]
+topics: ["markdown", "cardano","aiken"]
 published: false
 image: "main.png"
 description: "Zenn で使用可能な Markdown記法 のリストです。"
