--- a/articles/7e5ff36c98fd05.md
+++ b/articles/7e5ff36c98fd05.md
@@ -20,6 +20,10 @@ https://github.com/zenn-dev/zenn-docs/blob/main/articles/markdown-guide.md
 #### 見出し4
 ```
 
+## 見出し2
+### 見出し3
+#### 見出し4
+
 :::message
 アクセシビリティの観点から`見出し2`から始めることをおすすめします
 :::
