--- a/articles/7e5ff36c98fd05.md
+++ b/articles/7e5ff36c98fd05.md
@@ -2,7 +2,7 @@
 title: "Zenn Markdown記法"
 emoji: "📗"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["markdown", "cardano","aiken"]
+topics: ["markdown", "cardano", "aiken"]
 published: false
 image: "main.png"
 description: "Zenn で使用可能な Markdown記法 のリストです。"
@@ -14,20 +14,24 @@ https://github.com/zenn-dev/zenn-docs/blob/main/articles/markdown-guide.md
 # 見出し
 
 ```md
-# 見出し1
-## 見出し2
-### 見出し3
-#### 見出し4
+# 見出し 1
+
+## 見出し 2
+
+### 見出し 3
+
+#### 見出し 4
 ```
 
-## 見出し2
-### 見出し3
-#### 見出し4
+## 見出し 2
+
+### 見出し 3
+
+#### 見出し 4
 
 :::message
 アクセシビリティの観点から`見出し2`から始めることをおすすめします
 :::
-
 
 # リスト
 
@@ -77,7 +81,7 @@ https://github.com/zenn-dev/zenn-docs/blob/main/articles/markdown-guide.md
 画像の表示が大きすぎる場合は、URL の後に半角スペースを空けて`=○○x`と記述すると、画像の幅を px 単位で指定できます。
 
 ```md
-![altテキスト](https://画像のURL =250x)
+![altテキスト](https://画像の URL =250x)
 ```
 
 ![altテキスト](https://storage.googleapis.com/zenn-user-upload/gxnwu3br83nsbqs873uibiy6fd43 =250x)
@@ -88,7 +92,7 @@ https://github.com/zenn-dev/zenn-docs/blob/main/articles/markdown-guide.md
 
 ```md
 ![](https://画像のURL)
-*キャプション*
+_キャプション_
 ```
 
 ![](https://storage.googleapis.com/zenn-user-upload/gxnwu3br83nsbqs873uibiy6fd43 =250x)
@@ -116,3 +120,12 @@ _captions_
 | Text | Text | Text |
 | Text | Text | Text |
 
+# コードブロック
+
+> ```ts
+> export const helloWorld: string = "Hello World !";
+> ```
+
+```ts
+export const helloWorld: string = "Hello World !";
+```
