--- a/articles/7e5ff36c98fd05.md
+++ b/articles/7e5ff36c98fd05.md
@@ -122,10 +122,6 @@ _captions_
 
 # コードブロック
 
-> ```ts
-> export const helloWorld: string = "Hello World !";
-> ```
-
-```ts
+```ts: hello.ts
 export const helloWorld: string = "Hello World !";
 ```
