--- a/articles/fa2e08523f72bf.md
+++ b/articles/fa2e08523f72bf.md
@@ -35,3 +35,40 @@ export const Box = ({children, ...RecipeVariantProps}: PageProps) => {
 
 export default Box;
 ```
+
+```ts:/libs/Hello.ts
+import { cva, RecipeVariantProps } from "@/styled-system/css";
+
+type PageProps = {
+  children: React.ReactNode;
+} & RecipeVariantProps<typeof box>;
+
+export const box = cva({
+  base: {
+    bgColor: "theme",
+    borderRadius: "10px",
+    shadow: "outShadows",
+    alignItems: "center",
+  },
+});
+
+export const Box = ({children, ...RecipeVariantProps}: PageProps) => {
+  return (
+    <div className={box(RecipeVariantProps)}>
+      {children}
+    </div>
+  );
+}
+
+export default Box;
+```
+
+# ダイアグラム
+
+```mermaid
+graph TB
+    A[Hard edge] -->|Link text| B(Round edge)
+    B --> C{Decision}
+    C -->|One| D[Result one]
+    C -->|Two| E[Result two]
+```
