--- a/articles/7e5ff36c98fd05.md
+++ b/articles/7e5ff36c98fd05.md
@@ -123,3 +123,14 @@ _captions_
 ```ts
 export const helloWorld: string = "Hello World !";
 ```
+
+
+# 埋め込みコンテンツ
+
+## Twitter
+
+https://twitter.com/CIEL_Stake_Pool/status/1615618778192306178
+
+## YouTube
+
+https://www.youtube.com/watch?v=R8834LXrXS8
